
[TestGenHelmReleaseSimple - 1]
apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  name: podinfo
  namespace: default
spec:
  chart:
    spec:
      chart: podinfo
      sourceRef:
        kind: HelmRepository
        name: podinfo
        namespace: default
  interval: 1m0s
  timeout: 5m0s
status: {}
✔ generated HelmRelease

---

[TestGenHelmReleaseWithAllFlags - 1]
apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  name: webapp
  namespace: production
spec:
  chart:
    spec:
      chart: webapp
      sourceRef:
        kind: HelmRepository
        name: charts
        namespace: flux-system
      version: ^1.0.0
  install:
    crds: Create
    createNamespace: true
  interval: 5m0s
  releaseName: webapp-prod
  serviceAccountName: webapp-sa
  storageNamespace: flux-system
  targetNamespace: apps
  timeout: 10m0s
  upgrade:
    crds: CreateReplace
status: {}
✔ generated HelmRelease

---

[TestGenHelmReleaseWithChartRef - 1]
apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  name: webapp
  namespace: default
spec:
  chartRef:
    kind: OCIRepository
    name: webapp
    namespace: flux-system
  interval: 1m0s
  timeout: 5m0s
status: {}
✔ generated HelmRelease

---

[TestGenHelmReleaseWithDependencies - 1]
apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  name: webapp
  namespace: default
spec:
  chart:
    spec:
      chart: webapp
      sourceRef:
        kind: HelmRepository
        name: charts
        namespace: default
  dependsOn:
  - name: database
  - name: redis
    namespace: production
  interval: 1m0s
  timeout: 5m0s
status: {}
✔ generated HelmRelease

---

[TestGenHelmReleaseWithValuesFile - 1]
apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  name: webapp
  namespace: default
spec:
  chart:
    spec:
      chart: webapp
      sourceRef:
        kind: HelmRepository
        name: charts
        namespace: default
  interval: 1m0s
  timeout: 5m0s
  values:
    image:
      tag: v2.0.0
    replicaCount: 3
status: {}
✔ generated HelmRelease

---

[TestGenHelmReleaseWithValuesFrom - 1]
apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  name: webapp
  namespace: default
spec:
  chart:
    spec:
      chart: webapp
      sourceRef:
        kind: HelmRepository
        name: charts
        namespace: default
  interval: 1m0s
  timeout: 5m0s
  valuesFrom:
  - kind: Secret
    name: my-values
  - kind: ConfigMap
    name: common-config
status: {}
✔ generated HelmRelease

---

[TestGenHelmReleaseWithVersion - 1]
apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  name: webapp
  namespace: production
spec:
  chart:
    spec:
      chart: webapp
      sourceRef:
        kind: HelmRepository
        name: charts
        namespace: production
      version: ^1.0.0
  interval: 1m0s
  timeout: 5m0s
status: {}
✔ generated HelmRelease

---
